--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,19 +25,18 @@ jobs:
           tools: composer:v2
           coverage: xdebug
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '22'
-          cache: 'npm'
+          bun-version: latest
 
-      - name: Install Node Dependencies
-        run: npm ci
+      - name: Install Node Dependencies with Bun
+        run: bun install
 
       - name: Build Assets
-        run: npm run build
+        run: bun run build
 
-      - name: Install Dependencies
+      - name: Install PHP Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Copy Environment File
@@ -46,5 +45,5 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
-      - name: Tests
+      - name: Run Tests
         run: ./vendor/bin/pest
